@@ -2,6 +2,12 @@ Specl NEWS - User visible changes.
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes:
+
+  - Using specl.shell when Specl itself and the process being
+    spawned require different versions of Lua no longer crashes
+    with corrupted shared package.path settings.
+
 
 * Noteworthy changes in release 9 (2013-12-09) [stable]
 
